- `spectate`: don't allow temporarily modified announcement settings to be written to disk when "auto-unpause" mode is enabled
- `changevein`: fix a crash that could occur when attempting to change a vein into itself
- `overlay`: reset draw context between rendering widgets so context changes can't propagate from widget to widget

## Misc Improvements
- `spectate`: player-set configuration is now stored globally instead of per-fort
- `autobutcher`: treat animals on restraints as unavailable for slaughter
- `stockpiles`: add property filters for brewable, millable, and processable (e.g. at a Farmer's workshop) organic materials
- `quickfort`: redesigned ``library/aquifer_tap.cav`` to improve the water fill rate

## Documentation
- `stonesense-art-guide`: guide for making sprite art for Stonesense

## API
- ``Military::removeFromSquad``: removes unit from any squad assignments
- ``Buildings::checkFreeTiles``: now takes a building instead of a pointer to the building extents
- ``Units::isUnitInBox``, ``Units::getUnitsInBox``: don't include inactive units
- ``Items::getItemBaseValue``: adjust to the reduced value of prepared meals (changed in DF 51.06)
- ``Items::getValue``: magical powers now correctly contribute to item value

## Lua
- ``dfhack.units.setAutomaticProfessions``: sets unit labors according to current work detail settings
- ``dfhack.military.removeFromSquad``: Lua API for ``Military::removeFromSquad``
- ``gui.dwarfmode``: adventure mode cursor now supported in ``getCursorPos``, ``setCursorPos``, and ``clearCursorPos`` funcitons
- ``dfhack.buildings.checkFreeTiles``: now takes a building pointer instead of an extents parameter
- ``overlay.isOverlayEnabled``: new API for querying whether a given overlay is enabled
- ``overlay``: widgets can now declare ``overlay_onenable`` and ``overlay_ondisable`` functions to hook enable/disable

## Removed
- `orders`: MakeCheese job removed from library/basic orders set. Please use `autocheese` instead!

# 51.06-r1
